--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,18 @@
 <html>
 <head>
     <title>Backgammon</title>
-    <script src="../lib/createjs-2013.12.12.min.js"></script>
-    <script src="../lib/jquery-1.11.0.min.js"></script>
-    <script src="../lib/underscore-min.js"></script>
+    <script src="lib/createjs-2013.12.12.min.js"></script>
+    <script src="lib/jquery-1.11.0.min.js"></script>
+    <script src="lib/lodash.min.js"></script>
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
-
-    <link rel="stylesheet" href="../css/boardView.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
     <link rel="stylesheet" href="backgammon.css">
     <link rel="stylesheet" href="fonts.css">
 
-    <script data-main="modules/main" src="../lib/require.js"></script>
+    <script data-main="modules/main" src="lib/require.js"></script>
+    <script src="lib/mule-sdk.min.js"></script>
 </head>
 
 
